fix mobile drawer

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <script type="text/javascript" src="http://app.rsvpify.com/embed/500142118"></script><script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script><script type="text/javascript">iFrameResize({autoResize: true,checkOrigin: false,heightCalculationMethod: 'max',enablePublicMethods: true}, "#RSVPifyIFrame");</script>
+    <script type="text/javascript" src="https://app.rsvpify.com/embed/500142118"></script><script type="text/javascript" src="https://app.rsvpify.com/js/iframeResizer.min.js"></script><script type="text/javascript">iFrameResize({autoResize: true,checkOrigin: false,heightCalculationMethod: 'max',enablePublicMethods: true}, "#RSVPifyIFrame");</script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
